IpComida.class simplificada